--- a/sass/components/_chart-size.scss
+++ b/sass/components/_chart-size.scss
@@ -40,15 +40,23 @@
         width: 45px;
     }
 }
-@media only screen and (min-width: 850px) {
+@media only screen and (min-width: 480px) {
     .cq-chart-size{
-        width: 126px !important;
+        width: 94px !important;
         .cq-menu-btn {
-            width: 56px;
+            width: 47px;
         }
     }
 }
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 900px) {
+    .cq-chart-size{
+        width: 94px !important;
+        .cq-menu-btn {
+            width: 47px;
+        }
+    }
+}
+@media only screen and (min-width: 1100px) {
     .cq-chart-size{
         width: 180px !important;
         .cq-menu-btn {
