--- a/sass/components/_chart-types.scss
+++ b/sass/components/_chart-types.scss
@@ -10,7 +10,7 @@
 	}
 	.cq-menu-dropdown {
 		width: 200px;
-		padding: 16px;
+		padding: 16px 5px 16px 16px;
 		@include box-sizing(border-box);
 	}
 	.ciq-title {
