--- a/sass/components/_ciq-list.scss
+++ b/sass/components/_ciq-list.scss
@@ -2,6 +2,9 @@
 	max-height: 260px;
 	overflow-y: auto;
 	position: relative;
+	&.ps{
+		padding-right: 11px;
+	}
 	.ciq-list-item {
 		cursor: pointer;
 		line-height: 32px;
