--- a/sass/components/_draw-tools.scss
+++ b/sass/components/_draw-tools.scss
@@ -27,7 +27,7 @@
             }
         }
         .body {
-            padding: 16px;
+            padding: 16px 5px 16px 16px;
         }
     }
 }
