--- a/sass/components/_view.scss
+++ b/sass/components/_view.scss
@@ -45,9 +45,11 @@
 		.content {
 			display: block;
 			height: 135px;
-			overflow: scroll;
-			padding: 16px;
+			padding: 16px 5px 16px 16px;
 			.ciq-list{
+				height: 135px;
+				overflow: auto;
+				display: block;
 				.ciq-list-item{
 					align-items: center;
 					justify-content: flex-start;
